Fix active menu item alignment

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -59,5 +59,5 @@
     width: 8px;
     height: 100%;
     background: var(--pink);
-
+    margin-right: calc(1rem - 8px);
 }
